Mon May 30 15:22:16 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/XML_File_Intf.h:
        * DAnCE/Config_Handlers/DP_Handler.h:

          auto_ptr is changed with ACE_Auto_Ptr, auto_ptr does not have
          reset in VC6.

Mon May 30 17:59:28 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/TypeNameEmitter.cpp:

          Fixed incorrect code generation in *_svnt.cpp file for
          attribute assignment of sequence types. Thanks to Sunil Rottoo
          <srottoo@adacelcanada.com> for reporting the problem.

Mon May 30 12:19:42 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Port_Activator_T.cpp:
	* DAnCE/ciao/Servant_Activator.cpp:
	* DAnCE/ciao/Servant_Impl_Base.cpp:

	  Made use of ACE_ENV macros to fix Debian Full Reactor
	  build errors.

Fri May 27 23:35:23 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Container_Impl.cpp:
	* DAnCE/ciao/Container_Impl.h:
	* DAnCE/ciao/Home_Servant_Impl_T.cpp:
	* DAnCE/ciao/Home_Servant_Impl_T.h:

	Changed the structure of the utility maps that maintain
	the component references, to use "_var" instead of "_ptr"
	in order to facilitate effective memory destructions.

Fri May 27 20:26:33 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * CCF/CCF/CCF.sln:
        * CCF/Example/Example.sln:
        * CIDLC/CIDLC.sln:
        * CCF/CCF/CIDL/CIDL.vcproj:
        * CCF/CCF/CodeGenerationKit/CodeGenerationKit.vcproj:
        * CCF/CCF/CompilerElements/CompilerElements.vcproj:
        * CCF/CCF/IDL2/IDL2.vcproj:
        * CCF/CCF/IDL3/IDL3.vcproj:
        * CCF/Example/CIDL/LocalExecutorMapping/LocalExecutorMapping.vcproj:
        * CCF/Example/CodeGenerationKit/Indentation/IDL/IDL.vcproj:
        * CIDLC/CIDLC.vcproj:

          Deleted MSVC solution and project files, these are generated by the
          mwc.

Fri May 27 13:41:20 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Port_Activator.h:
	* DAnCE/ciao/Port_Activator_T.cpp: